force-app/main/default/objects/TIMBASURVEYS__QuestionType__c/fields/TIMBASURVEYS__SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestion</label>
    <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
    <relationshipName>SurveyStatistics</relationshipName>
    <type>Lookup</type>
</CustomField>