force-app/main/default/objects/TIMBASURVEYS__QuestionType__c/fields/TIMBASURVEYS__TimesSelected__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__TimesSelected__c</fullName>
    <label>TimesSelected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>